Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22654

Qt Creator randomly crashing at Debugger::Internal::QmlInspectorAgent::onResult()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 4.11.0
    • Qt Creator 4.9.2, Qt Creator 4.10.1
    • Debugger
    • None
    • macOS
    • 2808f633ec3bf617dbeb8f67d54bc4896f26443f a6d3101207901172ddab3593dbd500d89d799128

    Description

      I've been struggling for awhile with Qt Creator crashing randomly while I'm debugging my app on MacOS Mojave. It always seems to crash at a call to Debugger::Internal::QmlInspectorAgent::onResult().

      I've attached an abbreviated .crash file.

      My hunch is that my QML is getting bad data from one of my models, causing QmlInspectorAgent to crash out. Because this causes Qt Creator to just go away, it leaves me no breadcrumbs to help pinpoint the problem.

      This has been happening for probably several versions prior to 4.9.2, but I haven't paid close attention to exactly when I first saw it.

       

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ulherman Ulf Hermann
              aaron23 Aaron Crain
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes