Debugger: Robustify QmlInspectorAgent::onResult

Task-number: QTCREATORBUG-22654
Change-Id: I4bf0a17581ff3fcdc1a0b6dd9eb21fd2cf9b756c
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>